@@ -24,35 +24,27 @@ EdgeContextMenu::EdgeContextMenu(QWidget * parent, Mediator & mediator)
   : QMenu(parent)
   , m_mediator(mediator)
 {
-    auto changeEdgeDirectionAction(new QAction(tr("Change direction"), this));
+    const auto changeEdgeDirectionAction(new QAction(tr("Change direction"), this));
     QObject::connect(changeEdgeDirectionAction, &QAction::triggered, [=] {
-        auto edge = m_mediator.selectedEdge();
         m_mediator.saveUndoPoint();
-        edge->setReversed(!edge->reversed());
+        m_mediator.selectedEdge()->setReversed(!m_mediator.selectedEdge()->reversed());
     });
 
-    auto hideEdgeArrowAction(new QAction(tr("Hide arrow"), this));
-    QObject::connect(hideEdgeArrowAction, &QAction::triggered, [=] {
-        assert(m_mediator.selectedEdge());
+    const auto showEdgeArrowAction(new QAction(tr("Show arrow"), this));
+    QObject::connect(showEdgeArrowAction, &QAction::triggered, [=] {
         m_mediator.saveUndoPoint();
-        m_mediator.selectedEdge()->setArrowMode(Edge::ArrowMode::Hidden);
+        m_mediator.selectedEdge()->setArrowMode(showEdgeArrowAction->isChecked() ? Edge::ArrowMode::Single : Edge::ArrowMode::Hidden);
     });
+    showEdgeArrowAction->setCheckable(true);
 
-    auto singleArrowAction(new QAction(tr("Single arrow"), this));
-    QObject::connect(singleArrowAction, &QAction::triggered, [=] {
-        assert(m_mediator.selectedEdge());
-        m_mediator.saveUndoPoint();
-        m_mediator.selectedEdge()->setArrowMode(Edge::ArrowMode::Single);
-    });
-
-    auto doubleArrowAction(new QAction(tr("Double arrow"), this));
+    const auto doubleArrowAction(new QAction(tr("Double arrow"), this));
     QObject::connect(doubleArrowAction, &QAction::triggered, [=] {
-        assert(m_mediator.selectedEdge());
         m_mediator.saveUndoPoint();
-        m_mediator.selectedEdge()->setArrowMode(Edge::ArrowMode::Double);
+        m_mediator.selectedEdge()->setArrowMode(doubleArrowAction->isChecked() ? Edge::ArrowMode::Double : Edge::ArrowMode::Single);
     });
+    doubleArrowAction->setCheckable(true);
 
-    auto deleteEdgeAction(new QAction(tr("Delete edge"), this));
+    const auto deleteEdgeAction(new QAction(tr("Delete edge"), this));
     QObject::connect(deleteEdgeAction, &QAction::triggered, [=] {
         m_mediator.setSelectedEdge(nullptr);
         m_mediator.saveUndoPoint();
@@ -65,20 +57,19 @@ EdgeContextMenu::EdgeContextMenu(QWidget * parent, Mediator & mediator)
     // Populate the menu
     addAction(changeEdgeDirectionAction);
     addSeparator();
-    addAction(hideEdgeArrowAction);
+    addAction(showEdgeArrowAction);
     addSeparator();
-    addAction(singleArrowAction);
     addAction(doubleArrowAction);
     addSeparator();
     addAction(deleteEdgeAction);
 
-    // Set selected edge when the menu opens.
+    // Set correct edge config when the menu opens.
     connect(this, &QMenu::aboutToShow, [=] {
         m_selectedEdge = m_mediator.selectedEdge();
+        assert(m_selectedEdge);
         changeEdgeDirectionAction->setEnabled(m_selectedEdge->arrowMode() != Edge::ArrowMode::Double && m_selectedEdge->arrowMode() != Edge::ArrowMode::Hidden);
-        doubleArrowAction->setEnabled(m_selectedEdge->arrowMode() != Edge::ArrowMode::Double);
-        hideEdgeArrowAction->setEnabled(m_selectedEdge->arrowMode() != Edge::ArrowMode::Hidden);
-        singleArrowAction->setEnabled(m_selectedEdge->arrowMode() != Edge::ArrowMode::Single);
+        doubleArrowAction->setChecked(m_selectedEdge->arrowMode() == Edge::ArrowMode::Double);
+        showEdgeArrowAction->setChecked(m_selectedEdge->arrowMode() != Edge::ArrowMode::Hidden);
     });
 
     // Always clear edge selection when the menu closes.
