@@ -16,6 +16,8 @@ Bug fixes:
 
 Other:
 
+* Simplify edge context menu
+
 3.0.0
 =====
 
